--- a/config.env
+++ b/config.env
@@ -23,8 +23,8 @@ TORRENT_TIMEOUT = ""
 EXTENTION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "true"
 # Update
-UPSTREAM_REPO = "https://github.com/sathishsksk/upstreem-robo"
-UPSTREAM_BRANCH = "h-code"
+UPSTREAM_REPO = ""
+UPSTREAM_BRANCH = ""
 # Leech
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
