--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "1905154402:AAGbXIlL3eRl4AgTXjSBa-KfgGcnfqhx8Zs"
+BOT_TOKEN = "5547205368:AAH3sAPmy3NpJTqhUZYQ6JXVBcqEuZRaY-o"
 GDRIVE_FOLDER_ID = "1fJ3Qzs4cjhv3-1Uafvxnuaj76OoPF9lt"
 OWNER_ID = 1126746691
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -31,7 +31,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
-BASE_URL_OF_BOT = "https://bypbyp.herokuapp.com/"
+BASE_URL_OF_BOT = "https://sathishsk-kk.onrender.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
